========================
django-profile Changelog
========================

Development version
-------------------

* Added the French translation. Thanks so much to stephane.angel:
	http://code.google.com/p/django-profile/issues/detail?id=50
* Added and aditional check to the code to make sure that this bug doesn't happen:
	http://code.google.com/p/django-profile/issues/detail?id=49
* Added a setup.py file. Thanks to Abhishek Mukher:
	Thanks to http://code.google.com/p/django-profile/issues/detail?id=48
* Added the possibility to auto-discover the user localization based in his IP.
* Media directory made independent from the global media. Thanks to waifunlee for reporting:
	http://code.google.com/p/django-profile/issues/detail?id=37

  Seen on this thread discussion too:
	https://groups.google.com/group/django-developers/browse_thread/thread/94efe43b1d1c7787?pli=1

Version 0.6.0
-------------------
* Solved some bugs. Thanks to Fabio Varesano.
* Added Traditional Chinese translation. Thanks to Chiu Wei Jia.
* Renamed the setting WEBSEARCH to AVATAR_WEBSEARCH.
* Setting AVATAR_DEFAULT is required, if it's not stablished an exception
  will raise.
* Lot of simplifications. Removed the public/private user selection. It was 
  confusing.
* Model abstraction with django model inheritance. Now the Profile class has 
  been renamed BaseProfile. Thanks to Rob Yates and Alvaro Mouriño.
* Better management of avatars. New templatetag to generate thumbs on the fly.
  Thanks to Alvaro Mouriño.
* Password managament modified to use the new django password management 
  utilities.
* Templates modified to do reverse URL.
* Better management of urls/view variables. Thanks to Alvaro Mouriño.
* Renamed APIKEY setting to GOOGLE_MAPS_API_KEY.
* Templates modified to do reverse URL.
* Added internacionalization of the urls. Credits to Alvaro Stevens.
* Changed the model of userprofile to solve the problem shown on this ticket: